# Exoboot_dev_hub

./: .gitignore  .pre-commit-config.yaml  COMMIT_EDITMSG  CONTRIBUTING.md  DATA_ANALYSIS_FIXES.md  LICENSE  README.md  ankle_angle_plotter.py  basic_exoboot_connect.py  basic_movement_test.py  cable_tension_diagnostic.py  communication_diagnostic.py  device_troubleshoot.py  exoboot_1.py  exoboot_gui.py  fixed_movement_test.py  force_troubleshooting.py  launch_experiment.py  port_detector.py  pyproject.toml  quick_high_current_test.py  requirements-dev.txt  requirements.txt  safe_disconnect.py  torque_angle_analyzer.py
Peng_controller(actuation_timing_perception)/: Collins_Torque_Profile.py  Collins_Torque_Profile_prev.py  Current_Control.py  Exo_Init.py  HS_Detection.py  Position_Control.py  Read_Only.py  Timing_Perception_Adaptive.py  Timing_Perception_Adaptive_Always.py
Peng_controller(actuation_timing_perception)/Calibration/: Boot_Calibration.py  bootCal.txt  exoTorqueCalcCal.m  left_boot_calib.csv  left_boot_calib_new.csv  right_boot_calib.csv  right_boot_calib_new.csv
Peng_controller(actuation_timing_perception)/Data/: Boot_Data_Analysis.py  left_data.csv  right_data.csv
Peng_controller(actuation_timing_perception)/TimingPerception_Adaptive_APP/app/: build.gradle
Peng_controller(actuation_timing_perception)/TorquePerception_AndroidAPP/: local.properties  settings.gradle
prevExamples_and_Exp_resources/: EXAMPLE_actpack_trial.py  EXAMPLE_torque_profile_graphV2.py  experiment_protocol.docx
scripts/: install_linux.sh  install_windows.bat
settings/: settingTest2.json  test1.json
src/exoboot_perception/: __init__.py  constants.py  controller.py  gui.py
